--- a/main.css
+++ b/main.css
@@ -37,10 +37,14 @@ body{
 
 .logo{
     font-size: 2.5rem;
-    color: var(--blue-logo);
     padding-left: 2rem;
     font-family: Kaushan Script;
     animation: myAnim 1s ease 0s 1 normal forwards;
+}
+
+.logo a{
+    text-decoration: none;
+    color: var(--blue-logo);
 }
 
 @keyframes myAnim {
@@ -162,7 +166,27 @@ body{
 #hero{
     min-height: 100vh;
     position: relative;
-    top: 12vh;
+    display: grid;
+    place-items: center;
+    margin: auto;
+    top: 12vh
+}
+
+.slogan{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 6rem;
+}
+
+.slogan h1{
+    font-size: 6rem;
+    text-align: center;
+    width: 70vw;
+    color: var(--text-white);
+    text-transform: capitalize;
+    font-weight: 1000;
 }
 
 video{
@@ -185,4 +209,54 @@ video{
     opacity: 0.5;
     mix-blend-mode: overlay;
     z-index: -1;
+}
+
+
+.arrow {
+	width: 2rem;
+	height: 2rem;
+	box-sizing: border-box;
+	position: absolute;
+	left: 50vw;
+	top: 60%;
+	transform: rotate(135deg);
+	
+	&::before {
+		content: '';
+		width: 100%;
+		height: 100%;
+		border-width: .8vmin .8vmin 0 0;
+		border-style: solid;
+		border-color: var(--text-white);
+		transition: .2s ease;
+		display: block;
+		transform-origin: 100% 0;
+	}
+
+	
+	&:after {
+		content: '';
+		float: left;
+		position: relative;
+		top: -100%;
+		width: 100%;
+		height: 100%;
+		border-width: 0 .8vmin 0 0;
+		border-style: solid;
+		border-color: var(--text-white);
+		transform-origin: 100% 0;
+		transition:.2s ease;
+	}
+	
+	&:hover::after {
+		transform: rotate(45deg);
+		border-color: var(--blue-logo);
+		height: 120%;
+	}
+	&:hover::before {
+		border-color: var(--blue-logo);
+		transform: scale(.8);
+		
+	}
+	
 }
